@@ -48,8 +48,10 @@ var cookies  = exports.cookies   = require('cookies')
 var _        = exports._         = require('underscore')
 var oauth    = exports.oauth     = require('oauth')
 var url      = exports.url       = require('url')
+var twitter  = exports.twitter   = require('twitter')
 
 var seneca   = exports.seneca    = require('../../support/seneca')
+//var seneca   = exports.seneca    = require('seneca')
 
 var now      = exports.now   = require('now')
 //var now      = exports.now   = require('../../support/now')
