@@ -136,7 +136,7 @@
       <input type="text" id="post_text" >
       <input type="button" value="Send" id="post_send">
       <div class="tweetout">
-        <input type="checkbox" checked="yes"> Also post on Twitter - appends <span id="rally_hash">#<%=val.hashtag%></span> 
+        <input id="send_tweet" type="checkbox" checked="yes"> Also post on Twitter - appends <span id="rally_hash">#<%=val.hashtag%></span> 
       </div>
     </div>
 
